<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EditProfile">

    <TextView
        android:text="@string/editProfile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/Id"
        />

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:id="@+id/Id"
        android:text=""
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/userName" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:text="jack123"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/NIC" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NIC"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:text="55543342V"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/emailAddress" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:text="jack@gmail.com"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/contact" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:text="077223223"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:text="54, Sea Road Avenue, USA"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:text="********"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        />

    <Button
    android:id="@+id/save_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Save" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel" />

    <TextView
        android:id="@+id/deactivateAccLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deactivate Account" />


</LinearLayout>